--- a/WeatherPy/VacationPy.ipynb
+++ b/WeatherPy/VacationPy.ipynb
@@ -196,13 +196,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9040e3ac3ff84ada875cfbb297a8e2cb",
+       "model_id": "b1fdb4983e4842258009c2866ac8f754",
        "version_major": 2,
        "version_minor": 0
       },
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +502,7 @@
        "551      46.0         0.0       11.50  1649770041  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -565,6 +565,8 @@
        "      <th>Hotel Name</th>\n",
        "      <th>City</th>\n",
        "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -573,116 +575,144 @@
        "      <td>NaN</td>\n",
        "      <td>emerald</td>\n",
        "      <td>AU</td>\n",
+       "      <td>-23.5333</td>\n",
+       "      <td>148.1667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>NaN</td>\n",
        "      <td>rosetta</td>\n",
        "      <td>EG</td>\n",
+       "      <td>31.4044</td>\n",
+       "      <td>30.4164</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>NaN</td>\n",
        "      <td>yairipok</td>\n",
        "      <td>IN</td>\n",
+       "      <td>24.6667</td>\n",
+       "      <td>94.0667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>NaN</td>\n",
        "      <td>lukavica</td>\n",
        "      <td>BA</td>\n",
+       "      <td>44.7628</td>\n",
+       "      <td>18.1689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>NaN</td>\n",
        "      <td>apricena</td>\n",
        "      <td>IT</td>\n",
+       "      <td>41.7839</td>\n",
+       "      <td>15.4437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>NaN</td>\n",
        "      <td>saint-francois</td>\n",
        "      <td>FR</td>\n",
+       "      <td>46.4154</td>\n",
+       "      <td>3.9054</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>NaN</td>\n",
        "      <td>marsa matruh</td>\n",
        "      <td>EG</td>\n",
+       "      <td>31.3525</td>\n",
+       "      <td>27.2453</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>NaN</td>\n",
        "      <td>maldonado</td>\n",
        "      <td>UY</td>\n",
+       "      <td>-34.6667</td>\n",
+       "      <td>-54.9167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>NaN</td>\n",
        "      <td>pombia</td>\n",
        "      <td>IT</td>\n",
+       "      <td>45.6530</td>\n",
+       "      <td>8.6336</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>NaN</td>\n",
        "      <td>valparaiso</td>\n",
        "      <td>CL</td>\n",
+       "      <td>-33.0393</td>\n",
+       "      <td>-71.6273</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>NaN</td>\n",
        "      <td>mulege</td>\n",
        "      <td>MX</td>\n",
+       "      <td>26.8833</td>\n",
+       "      <td>-111.9833</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>NaN</td>\n",
        "      <td>makat</td>\n",
        "      <td>KZ</td>\n",
+       "      <td>47.6469</td>\n",
+       "      <td>53.3463</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>NaN</td>\n",
        "      <td>spreitenbach</td>\n",
        "      <td>CH</td>\n",
+       "      <td>47.4202</td>\n",
+       "      <td>8.3630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>NaN</td>\n",
        "      <td>charleroi</td>\n",
        "      <td>BE</td>\n",
+       "      <td>50.4130</td>\n",
+       "      <td>4.4465</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Hotel Name            City Country\n",
-       "0          NaN         emerald      AU\n",
-       "1          NaN         rosetta      EG\n",
-       "2          NaN        yairipok      IN\n",
-       "3          NaN        lukavica      BA\n",
-       "4          NaN        apricena      IT\n",
-       "5          NaN  saint-francois      FR\n",
-       "6          NaN    marsa matruh      EG\n",
-       "7          NaN       maldonado      UY\n",
-       "8          NaN          pombia      IT\n",
-       "9          NaN      valparaiso      CL\n",
-       "10         NaN          mulege      MX\n",
-       "11         NaN           makat      KZ\n",
-       "12         NaN    spreitenbach      CH\n",
-       "13         NaN       charleroi      BE"
+       "    Hotel Name            City Country      Lat       Lng\n",
+       "0          NaN         emerald      AU -23.5333  148.1667\n",
+       "1          NaN         rosetta      EG  31.4044   30.4164\n",
+       "2          NaN        yairipok      IN  24.6667   94.0667\n",
+       "3          NaN        lukavica      BA  44.7628   18.1689\n",
+       "4          NaN        apricena      IT  41.7839   15.4437\n",
+       "5          NaN  saint-francois      FR  46.4154    3.9054\n",
+       "6          NaN    marsa matruh      EG  31.3525   27.2453\n",
+       "7          NaN       maldonado      UY -34.6667  -54.9167\n",
+       "8          NaN          pombia      IT  45.6530    8.6336\n",
+       "9          NaN      valparaiso      CL -33.0393  -71.6273\n",
+       "10         NaN          mulege      MX  26.8833 -111.9833\n",
+       "11         NaN           makat      KZ  47.6469   53.3463\n",
+       "12         NaN    spreitenbach      CH  47.4202    8.3630\n",
+       "13         NaN       charleroi      BE  50.4130    4.4465"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create dataframe and empty column\n",
-    "hotel_df = ideal_city_df[['City', 'Country']]\n",
-    "hotel_df = hotel_df.reindex(columns = ['Hotel Name','City', 'Country'])\n",
+    "hotel_df = ideal_city_df[['City', 'Country','Lat', 'Lng']]\n",
+    "hotel_df = hotel_df.reindex(columns = ['Hotel Name','City', 'Country', 'Lat', 'Lng'])\n",
     "hotel_df = hotel_df.reset_index(drop = True)\n",
     "\n",
     "hotel_df\n"
@@ -690,38 +720,206 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hotel Name</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Irish Village</td>\n",
+       "      <td>emerald</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>-23.5333</td>\n",
+       "      <td>148.1667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Green Valley</td>\n",
+       "      <td>rosetta</td>\n",
+       "      <td>EG</td>\n",
+       "      <td>31.4044</td>\n",
+       "      <td>30.4164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ningthounai</td>\n",
+       "      <td>yairipok</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>24.6667</td>\n",
+       "      <td>94.0667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DUJA</td>\n",
+       "      <td>lukavica</td>\n",
+       "      <td>BA</td>\n",
+       "      <td>44.7628</td>\n",
+       "      <td>18.1689</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bed &amp; Breakfast CORSO ROMA</td>\n",
+       "      <td>apricena</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>41.7839</td>\n",
+       "      <td>15.4437</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Manoir Du Bonheur</td>\n",
+       "      <td>saint-francois</td>\n",
+       "      <td>FR</td>\n",
+       "      <td>46.4154</td>\n",
+       "      <td>3.9054</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Beau Site</td>\n",
+       "      <td>marsa matruh</td>\n",
+       "      <td>EG</td>\n",
+       "      <td>31.3525</td>\n",
+       "      <td>27.2453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>La Cimarrona</td>\n",
+       "      <td>maldonado</td>\n",
+       "      <td>UY</td>\n",
+       "      <td>-34.6667</td>\n",
+       "      <td>-54.9167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Albergo Fontana</td>\n",
+       "      <td>pombia</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>45.6530</td>\n",
+       "      <td>8.6336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Hotel Ultramar</td>\n",
+       "      <td>valparaiso</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>-33.0393</td>\n",
+       "      <td>-71.6273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Casa Granada</td>\n",
+       "      <td>mulege</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>26.8833</td>\n",
+       "      <td>-111.9833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Umit</td>\n",
+       "      <td>makat</td>\n",
+       "      <td>KZ</td>\n",
+       "      <td>47.6469</td>\n",
+       "      <td>53.3463</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Hotel Geroldswil</td>\n",
+       "      <td>spreitenbach</td>\n",
+       "      <td>CH</td>\n",
+       "      <td>47.4202</td>\n",
+       "      <td>8.3630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>ibis Charleroi Centre Gare</td>\n",
+       "      <td>charleroi</td>\n",
+       "      <td>BE</td>\n",
+       "      <td>50.4130</td>\n",
+       "      <td>4.4465</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Hotel Name            City Country      Lat       Lng\n",
+       "0            The Irish Village         emerald      AU -23.5333  148.1667\n",
+       "1                 Green Valley         rosetta      EG  31.4044   30.4164\n",
+       "2                  Ningthounai        yairipok      IN  24.6667   94.0667\n",
+       "3                         DUJA        lukavica      BA  44.7628   18.1689\n",
+       "4   Bed & Breakfast CORSO ROMA        apricena      IT  41.7839   15.4437\n",
+       "5            Manoir Du Bonheur  saint-francois      FR  46.4154    3.9054\n",
+       "6                    Beau Site    marsa matruh      EG  31.3525   27.2453\n",
+       "7                 La Cimarrona       maldonado      UY -34.6667  -54.9167\n",
+       "8              Albergo Fontana          pombia      IT  45.6530    8.6336\n",
+       "9               Hotel Ultramar      valparaiso      CL -33.0393  -71.6273\n",
+       "10                Casa Granada          mulege      MX  26.8833 -111.9833\n",
+       "11                        Umit           makat      KZ  47.6469   53.3463\n",
+       "12            Hotel Geroldswil    spreitenbach      CH  47.4202    8.3630\n",
+       "13  ibis Charleroi Centre Gare       charleroi      BE  50.4130    4.4465"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
     "#Use Google Places API to find the first hotel for each city located within 5,000 meters of your coordinates.\n",
+    "base_url = \"https://maps.googleapis.com/maps/api/place/nearbysearch/json\"\n",
+    "target_type = \"lodging\"\n",
+    "radius = 5000\n",
+    "params = {\n",
+    "    \"location\": \"\",\n",
+    "    \"type\": target_type,\n",
+    "    \"radius\": radius,\n",
+    "    \"key\": g_key\n",
+    "}\n",
     "\n",
+    "for index, row in hotel_df.iterrows():\n",
+    "    params['location'] = f\"{row['Lat']},{row['Lng']}\"\n",
+    "    response = requests.get(base_url, params).json()\n",
+    "    try:\n",
+    "        hotel_df.loc[index, 'Hotel Name'] = response['results'][0]['name']\n",
+    "    except:\n",
+    "        print(\"oops, something went wrong with the API call\")\n",
+    "        #print(response)\n",
+    "\n",
+    "hotel_df\n",
     "\n",
     "#Plot the hotels on top of the humidity heatmap, with each pin containing the Hotel Name, City, and Country, as in the following image:\n"
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "# Loop through dataframe and add nearby hotel result\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,20 +937,39 @@
     "# Store the DataFrame Row\n",
     "# NOTE: be sure to update with your DataFrame name\n",
     "hotel_info = [info_box_template.format(**row) for index, row in hotel_df.iterrows()]\n",
-    "locations = hotel_df[[\"Lat\", \"Lng\"]]"
+    "marker_locations = hotel_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1fdb4983e4842258009c2866ac8f754",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
+    "# Create marker layer\n",
+    "marker_layer = gmaps.marker_layer(marker_locations, info_box_content=hotel_info)\n",
     "\n",
-    "\n",
+    "# Add layer\n",
+    "fig.add_layer(marker_layer)\n",
     "\n",
     "# Display figure\n",
+    "fig\n",
     "\n"
    ]
   },
